--- a/style.css
+++ b/style.css
@@ -1,68 +1,106 @@
-*{
- margin: 0px;
- padding:0px;
- border: 0px; 
- max-width: 100%;
- max-height: 100%;
+* {
+    margin: 0;
 }
 
-
-
-html,body{
- max-width: 100%;
- max-height: 100%;
+/*css para o pagepilling*/
+.section {
+    /* the important one*/
+    background-attachment: fixed; 
+    background-size: auto 80%;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
 }
 
-.vh-100{
-	height: 100vh;
+.section:nth-child(1) {
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
 
-.image{
-	width: 60%;
-	height: 60%;
-	position: absolute;
-	top: 20%;
-	left:20%;
+.section:nth-child(2) {
+    background-color:#F6F6F6;
 }
 
-.titulo{
-	position: absolute;
-	top:20%;
-	left:5%;
-}
-	.texto{
-	position: absolute;
-	top: 35%;
-	left: 5%;
-	}
-	
-
-
-.cta{
-
-	/*Tamanho e Posição na página */
-	width: auto;
-	height: auto;
-	position: absolute;
-	top: 45%;
-	left: 5%;
-	align-items: center;
-
-
-	/*Cor*/
-	border-radius: 2px;
-	padding: 8px;
-	background-color: #FFE919;
+.section:nth-child(3) {
+    background-color:#F6F6F6;
 }
 
-
-#center{
-	align-items: center;
-	text-align: center;
-	padding-top: 10%;
+.section:nth-child(4) {
+    background-color:#F6F6F6;
 }
 
-#center-text{
-	text-align: center;
-	padding: 0% 25%;
+.section:nth-child(5) {
+    background-color:#F6F6F6;
+}
+
+.section:nth-child(6) {
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+
+/*css para o grid*/
+.grid {
+    display: grid;
+    grid-template-rows: 100vh;
+    grid-column-gap: 5%;
+    grid-template-columns: 1fr 1fr;
+    align-self: center;
+    align-items: center;
+}
+
+.grid2 {
+    display: grid;
+    grid-template-rows: 100vh;
+    grid-column-gap: 5%;
+    grid-template-columns: 1fr 1fr;
+    align-self: center;
+    align-items: center;
+}
+
+/*css do conteudo*/
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+h1 {
+    padding-bottom: 1%;
+}
+
+p {
+    padding-bottom: 3%;
+}
+
+.texto-left {
+    margin-left: 8em;
+    justify-self: center;
+}
+
+.texto-right {
+    margin-right: 8em;
+    justify-self: center;
+}
+
+.texto {
+    margin: 0 8em;
+    justify-self: center;
+}
+
+.imagem {
+    justify-self: center;
+}
+
+.cta {
+    /*Tamanho e Posição na página */
+    width: auto;
+    height: auto;
+    align-items: center;
+
+    /*Cor*/
+    border-radius: 4px;
+    padding: 8px;
+    background-color: #F7E54B;
+}
+
+.last-page {
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
