--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ p {
 
 .btn {
     height: 50px;
+    background-color: #444;
+    border-radius: 8px;
+}
+
+a:last-of-type {
+    margin-left: 15px;
 }
 
 .cta {
