--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
     position: fixed;
     width: 100%;
     z-index: 7;
+
 }
 
 #menu ul li {
@@ -54,11 +55,19 @@
 
 #menu ul li a {
     text-decoration: none;
+    color: white;
 }
 
 a:visited {
     color: #1c1c1c;
 }
+/*Alteração 02/10*/
+#menu ul li a:hover{
+    background-color: black;
+    opacity: 0.7;
+    border-radius: 10%;
+}
+/*Alteração 02/10*/
 
 /*css para o grid*/
 .grid {
@@ -138,10 +147,17 @@ footer {
     width: 100%;
     justify-content: center;
 }
+footer{
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 47%, rgba(237,237,237,1) 100%);
+
+}
 
 footer p {
     padding: 1%;
-    font-size: 12px;
+    font-size: 16px;
+}
+footer a{
+    text-decoration: none;
 }
 
 #first-text{
@@ -152,3 +168,12 @@ footer p {
     width: auto;
     height: 550px;
 }
+
+/*sla deu vontade*/
+/*Alteração 02/10
+@media (max-width:740px){
+    body p{
+        font-size: 20px;
+    }
+}
+/*Alteração 02/10*/
