--- a/style.css
+++ b/style.css
@@ -55,14 +55,15 @@
 
 #menu ul li a {
     text-decoration: none;
-    color: white;
+    color: black;
+    font-weight: bold;
 }
 
 a:visited {
     color: #1c1c1c;
 }
 /*Alteração 02/10*/
-#menu ul li a:hover{
+#menu ul li a .active{
     background-color: black;
     opacity: 0.7;
     border-radius: 10%;
@@ -146,11 +147,10 @@ footer {
     bottom: 0;
     width: 100%;
     justify-content: center;
-}
-footer{
     background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 47%, rgba(237,237,237,1) 100%);
 
 }
+
 
 footer p {
     padding: 1%;
